feat: Add pagination to endpoints
